@@ -89,7 +89,15 @@ class NetAction {
 
   static NetAction* newNetAction(void* data, unsigned int len);
   static void logStats();
-  static std::string getStats();
+
+  /* stats */
+  static unsigned int m_biggestTCPPacketSent;
+  static unsigned int m_biggestUDPPacketSent;
+  static unsigned int m_nbTCPPacketsSent;
+  static unsigned int m_nbUDPPacketsSent;
+  static unsigned int m_TCPPacketsSizeSent;
+  static unsigned int m_UDPPacketsSizeSent;
+  /* ***** */
 
   protected:
   void send(TCPsocket* i_tcpsd, UDPsocket* i_udpsd, UDPpacket* i_sendPacket, IPaddress* i_udpRemoteIP, const void* subPacketData, int subPacketLen);
@@ -112,12 +120,6 @@ class NetAction {
 
   private:
   static char m_buffer[NETACTION_MAX_PACKET_SIZE];
-  static unsigned int m_biggestTCPPacketSent;
-  static unsigned int m_biggestUDPPacketSent;
-  static unsigned int m_nbTCPPacketsSent;
-  static unsigned int m_nbUDPPacketsSent;
-  static unsigned int m_TCPPacketsSizeSent;
-  static unsigned int m_UDPPacketsSizeSent;
 
   bool m_forceTCP; // by default, xmoto try to use UDP when available ; for some actions, TCP can be forced
 };
